test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values_types/src/cfg_attr_experimental.sw
library;

#[cfg(experimental_new_encoding = "true")]
pub fn not_ok() {}